--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.njzjz.chemicaltools"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -25,5 +25,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.ikimuhendis:ldrawer:0.1'
     compile 'com.android.support:design:23.4.0'
+    compile('com.mikepenz.aboutlibraries:library:4.6.5@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
