--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:versionCode="3"
-        android:versionName="1.2">
+        android:versionCode="4"
+        android:versionName="1.3">
         <activity android:name=".TitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +20,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".MassActivity" />
         <activity android:name=".ExamActivity" />
+        <activity android:name=".SettingsActivity" />
     </application>
 
 </manifest>
