--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.njzjz.chemicaltools"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 12
-        versionName "1.56"
+        versionCode 13
+        versionName "1.57"
     }
     buildTypes {
         release {
@@ -29,4 +29,6 @@ dependencies {
         transitive = true
     }
     testCompile 'junit:junit:4.12'
+    compile files('libs/mta-android-stat-sdk-2.2.0_20160504.jar')
+    compile files('libs/mid-sdk-2.3.jar')
 }
