--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.njzjz.chemicaltools"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 13
-        versionName "1.57"
+        versionCode 14
+        versionName "1.58"
     }
     buildTypes {
         release {
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.ikimuhendis:ldrawer:0.1'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.sangbo.autoupdate:autoUpdate:1.0.1'
     compile('com.mikepenz.aboutlibraries:library:4.6.5@aar') {
         transitive = true
     }
