--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,21 @@ android {
         applicationId "com.njzjz.chemicaltools"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 21
-        versionName "1.63"
+        versionCode 22
+        versionName "1.64"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
@@ -42,5 +49,8 @@ dependencies {
     compile files('libs/umeng_social_apiv6.0.0.jar')
     compile files('libs/umeng_social_netv6.0.0.jar')
     compile files('libs/umeng_social_viewv6.0.0.jar')
+    compile ('com.android.support:support-v4:21.0.3')
+    // LeanCloud 基础包
+    compile ('cn.leancloud.android:avoscloud-sdk:v3.+')
 
 }
