--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,18 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:versionCode="4"
-        android:versionName="1.3"
-        android:name=".App"
-        >
+        android:versionName="1.3">
         <activity android:name=".TitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,16 +41,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:label="@string/button_element"/>
-        <activity android:name=".MassActivity"
-            android:label="@string/button_mass"/>
-        <activity android:name=".AcidActivity"
-            android:label="@string/button_acid"/>
-        <activity android:name=".ExamActivity"
-            android:label="@string/button_exam"/>
-        <activity android:name=".SettingsActivity"
-            android:label="@string/button_Settings"/>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/button_element" />
+        <activity
+            android:name=".MassActivity"
+            android:label="@string/button_mass" />
+        <activity
+            android:name=".AcidActivity"
+            android:label="@string/button_acid" />
+        <activity
+            android:name=".ExamActivity"
+            android:label="@string/button_exam" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/button_Settings" />
         <!-- 请将value改为MTA分配的appkey < -->
         <meta-data
             android:name="TA_APPKEY"
@@ -69,7 +75,7 @@
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
-            android:noHistory="true" >
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -81,18 +87,21 @@
         </activity>
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name="com.umeng.socialize.editorpage.ShareActivity"
-            android:theme="@style/Theme.UMDefault"
             android:excludeFromRecents="true"
-            />
+            android:theme="@style/Theme.UMDefault" />
+
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="57f39f45e0f55a55be0043f3" >
-        </meta-data>
+            android:value="57f39f45e0f55a55be0043f3"></meta-data>
+
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
