--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ var
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.njzjz.chemicaltools"
