fix Permission denied

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ android:
   - extra-android-support
 
 script:
-  - "./gradlew assembleRelease"
+  - chmod +x gradlew
+  - ./gradlew assembleRelease
