fix not accepted the license agreements
https://stackoverflow.com/questions/47719282/i-cant-build-android-27-tool-27-0-2-with-travis-ci/47726910#47726910

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ android:
   - extra-android-m2repository
   - extra-android-support
 
+before_install:
+  - yes | sdkmanager "platforms;android-23"
+
 script:
   - chmod +x gradlew
   - ./gradlew assembleRelease
