--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ android:
   - extra-android-m2repository
   - extra-android-support
 
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
 before_install:
   - yes | sdkmanager "platforms;android-23"
 
