--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,9 @@ android:
   - extra-android-m2repository
   - extra-android-support
 
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
 before_install:
-  - yes | sdkmanager "platforms;android-23"
+    - yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2"
+    - yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
 
 script:
   - chmod +x gradlew
